--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,3 +1,11 @@
+@import "~bootstrap/scss/bootstrap";
+@import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;700&family=Montserrat:wght@100;300;400;700&display=swap');
+
 .App {
     height: 100vh;
+
+    font-size: 24px;
+    // font-family: 'Karla', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
