--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -2,6 +2,14 @@
 $space-01: .8em;
 // -------
 
+// FONT SIZES
+$font-01: 12px;
+$font-02: 18px;
+$font-03: 24px;
+$font-04: 36px;
+$font-05: 42px;
+// -------
+
 // OTHER
 $border-radius: 5px;
 // -------
