Added close action to context menu and changed icons

--- a/client/src/components/MenuContext/menuContext.scss
+++ b/client/src/components/MenuContext/menuContext.scss
@@ -27,6 +27,7 @@
         &-border {
             border-radius: $border-radius;
             padding: 0 $space-01;
+            margin: $space-00 0;
         }
     }
 }
