Changed styling of input

--- a/client/src/components/Task/task.scss
+++ b/client/src/components/Task/task.scss
@@ -38,4 +38,13 @@
             color: $success;
         }
     }
+
+    input,
+    input:focus {
+        border: none;
+        background-color: transparent;
+        border-bottom: 1px solid $light;
+        color: $light;
+        outline: none;
+    }
 }
