--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -7,7 +7,7 @@
 
     font-size: 24px;
     // font-family: 'Karla', sans-serif;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-family;
     position: relative;
 
     .app-container {
@@ -62,4 +62,18 @@
     position: absolute;
     bottom: $space-01;
     right: 0;
+}
+
+.btn,
+.btn:focus {
+    background-color: $dark;
+    border: none;
+}
+
+.btn:active {
+    background-color: $warning !important;
+}
+
+.btn-danger {
+    background-color: $danger;
 }
