--- a/client/src/components/Heading/heading.scss
+++ b/client/src/components/Heading/heading.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;700&family=Montserrat:wght@100;300;400;700&display=swap');
 
 .heading {
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-family;
     font-size: $font-04;
     text-align: center;
     padding: $space-02 0;
