--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;700&family=Montserrat:wght@100;300;400;700&display=swap');
+
 // SPACING
 $space-00: .2em;
 $space-01: .4em;
@@ -14,5 +16,6 @@ $font-05: 42px;
 
 // OTHER
 $border-radius: 5px;
-$transition-time: .2s
+$transition-time: .2s;
+$font-family: 'Montserrat', sans-serif;
 // -------
